# AuthKit

./: .env  .env.local  Cargo.toml  package-lock.json  package.json  tailwind.config.js
migrations/: 20231026161621_create_users_table.sql
public/css/: app.css
resources/css/: app.css
resources/js/: app.js
scripts/: build.sh  init_redis.sh
src/: lib.rs  main.rs
src/http/: authentication.rs  check_email.rs  check_username.rs  cookie.rs  error.rs  extractor.rs  login.rs  mod.rs  utils.rs
src/http/authentication/: login.rs  mod.rs  register.rs
src/http/middleware/: auth.rs  mod.rs  redirect_if_authenticated.rs
src/view/: authentication.rs  input.rs  layout.rs  mod.rs
