[package]
name = "hands-on-maud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
axum = "0.6.20"
maud = { version = "0.25.0", features = ["axum"] }
serde = { version = "1.0.189", features = ["derive"] }
tokio = { version = "1.33.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["fs", "trace"] }
validator = { version = "0.16.1", features = ["derive"] }
